Practical 03/In Lab Code/.metals/metals.log
2024.07.02 08:46:12 INFO  Started: Metals version 1.3.2 in folders 'C:\Users\manet\OneDrive\Desktop\Scala' for client Visual Studio Code 1.90.2.
SLF4J(W): Class path contains multiple SLF4J providers.
SLF4J(W): Found provider [scribe.slf4j.ScribeServiceProvider@b2bfa01]
SLF4J(W): Found provider [ch.qos.logback.classic.spi.LogbackServiceProvider@1cbe3013]
SLF4J(W): See https://www.slf4j.org/codes.html#multiple_bindings for an explanation.
SLF4J(I): Actual provider is of type [scribe.slf4j.ScribeServiceProvider@b2bfa01]
2024.07.02 08:46:12 WARN  Flyway upgrade recommended: H2 2.2.224 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.220.
2024.07.02 08:46:14 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:17 INFO  Running List(C:\Users\manet\AppData\Local\Coursier\data\bin\scala-cli.BAT, setup-ide, C:\Users\manet\OneDrive\Desktop\Scala)
2024.07.02 08:46:17 INFO  Attempting to connect to the build server...
2024.07.02 08:46:17 INFO  Running BSP server List(C:\Users\manet\AppData\Local\Coursier\data\bin\.scala-cli.aux.exe, bsp, --json-options, C:\Users\manet\OneDrive\Desktop\Scala\.scala-build\ide-options-v2.json, --json-launcher-options, C:\Users\manet\OneDrive\Desktop\Scala\.scala-build\ide-launcher-options.json, --envs-file, C:\Users\manet\OneDrive\Desktop\Scala\.scala-build\ide-envs.json, C:\Users\manet\OneDrive\Desktop\Scala)
2024.07.02 08:46:17 INFO  tracing is disabled for protocol BSP, to enable tracing of incoming and outgoing JSON messages create an empty file at C:\Users\manet\OneDrive\Desktop\Scala\.metals\bsp.trace.json or C:\Users\manet\AppData\Local\scalameta\metals\cache\bsp.trace.json
2024.07.02 08:46:18 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:18 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:18 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:18 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:19 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:19 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:19 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:20 INFO  no build target found for C:\Users\manet\OneDrive\Desktop\Scala\1.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.07.02 08:46:21 INFO  time: Connected to build server in 3.8s
2024.07.02 08:46:21 INFO  Connected to Build server: scala-cli v1.3.2
2024.07.02 08:46:21 INFO  compiling scala_eabf8badfb (1 scala source)
2024.07.02 08:46:21 INFO  time: compiled Scala_eabf8badfb in 0.34s
2024.07.02 08:46:25 INFO  time: indexed workspace in 4.11s
Jul 02, 2024 8:47:37 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 302
Jul 02, 2024 8:47:57 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 482
Jul 02, 2024 8:48:03 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 524
Jul 02, 2024 8:48:13 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 616
2024.07.02 08:48:16 ERROR Failed to tokenize input for semantic tokens for C:\Users\manet\OneDrive\Desktop\Scala\1.scala
scala.meta.tokenizers.TokenizeException: <input>:7: error: unclosed string interpolation
    println(s"Sum of odd numbers : $")
              ^
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:32)
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:32)
	at scala.meta.internal.tokenizers.LegacyScanner.getStringPart(LegacyScanner.scala:605)
	at scala.meta.internal.tokenizers.LegacyScanner.fetchDoubleQuote$1(LegacyScanner.scala:347)
	at scala.meta.internal.tokenizers.LegacyScanner.fetchToken(LegacyScanner.scala:363)
	at scala.meta.internal.tokenizers.LegacyScanner.nextToken(LegacyScanner.scala:201)
	at scala.meta.internal.tokenizers.LegacyScanner.foreach(LegacyScanner.scala:912)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.uncachedTokenize(ScalametaTokenizer.scala:23)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.$anonfun$tokenize$1(ScalametaTokenizer.scala:17)
	at scala.collection.concurrent.TrieMap.getOrElseUpdate(TrieMap.scala:960)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.tokenize(ScalametaTokenizer.scala:17)
	at scala.meta.internal.tokenizers.ScalametaTokenizer$$anon$2.apply(ScalametaTokenizer.scala:322)
	at scala.meta.tokenizers.Api$XtensionTokenizeDialectInput.tokenize(Api.scala:22)
	at scala.meta.tokenizers.Api$XtensionTokenizeInputLike.tokenize(Api.scala:13)
	at scala.meta.internal.metals.SemanticTokensProvider$.getTokens(SemanticTokensProvider.scala:28)
	at scala.meta.internal.metals.SemanticTokensProvider$.provide(SemanticTokensProvider.scala:89)
	at scala.meta.internal.metals.Compilers.$anonfun$semanticTokens$3(Compilers.scala:545)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:467)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
	at java.lang.Thread.run(Thread.java:842)

2024.07.02 08:48:40 INFO  compiling scala_eabf8badfb (1 scala source)
2024.07.02 08:48:40 INFO  time: compiled Scala_eabf8badfb in 0.72s
2024.07.02 08:48:54 INFO  compiling scala_eabf8badfb (1 scala source)
2024.07.02 08:48:54 INFO  time: compiled Scala_eabf8badfb in 0.45s
2024.07.02 08:49:34 INFO  compiling scala_eabf8badfb (1 scala source)
2024.07.02 08:49:34 INFO  time: compiled Scala_eabf8badfb in 0.41s
2024.07.02 13:28:11 INFO  Shutting down server
2024.07.02 13:28:11 INFO  shutting down Metals
2024.07.02 13:28:12 INFO  Shut down connection with build server.
2024.07.02 13:28:11 INFO  Exiting server
